--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="modal-body">
                       <form>
                         <div class="mb-3">
-                          <label for="message-text" class="col-form-label">Caption</label>
+                          <label for="message-text" class="col-form-label">Caption:</label>
                           <textarea class="form-control" id="message-text"></textarea>
                         </div>
                       </form>
@@ -40,6 +40,9 @@
                     <div class="ml-3">
                       <button class="btn btn-light">
                       <i class="fa-solid fa-camera"></i>
+                    </button>
+                    <button class="btn btn-light">
+                      <i class="fa-solid fa-location-dot"></i>
                     </button>
                     </div>
                     <div class="modal-footer">
