--- a/index.html
+++ b/index.html
@@ -132,179 +132,128 @@
             <img src="https://picsum.photos/id/283/300/200" class="card-img mx-2 my-2" alt="...">
           </div>
         </div>
-
-        <div class="card-group">
-          <div class="card">
-            <img src="https://picsum.photos/id/281/300/200" class="card-img mx-2 my-2" alt="...">
-          </div>
-          <div class="card">
-            <img src="https://picsum.photos/id/295/300/200" class="card-img mx-2 my-2" alt="...">
-          </div>
-          <div class="card">
-            <img src="https://picsum.photos/id/294/300/200" class="card-img mx-2 my-2" alt="...">
-          </div>
-        </div>
-
-        <div class="card-group">
-          <div class="card">
-            <img src="https://picsum.photos/id/282/300/200" class="card-img mx-2 my-2" alt="...">
-          </div>
-          <div class="card">
-            <img src="https://picsum.photos/id/297/300/200" class="card-img mx-2 my-2" alt="...">
-          </div>
-          <div class="card">
-            <img src="https://picsum.photos/id/293/300/200" class="card-img mx-2 my-2" alt="...">
-          </div>
-        </div>
       </div>
 
       <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+        <div style="display: flex; flex-direction: column; align-items: center;">
 
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/237/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">My puppy!</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">8/10</p>
+            </div>
+            <img src="https://picsum.photos/id/237/4000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>460 likes</strong></p>
+              <p class="card-text">Just got a new dog! :)))</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">City at night</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">10/10</p>
+            </div>
+            <img src="https://picsum.photos/id/242/4000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>262 likes</strong></p>
+              <p class="card-text">I took this photo when I went out with my friends!</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">My new cam!</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">13/10</p>
+            </div>
+            <img src="https://picsum.photos/id/250/2000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>195 clikes</strong></p>
+              <p class="card-text">What a beauty!!!</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">Sunset</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">15/10</p>
+            </div>
+            <img src="https://picsum.photos/id/265/2000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>308 likes</strong></p>
+              <p class="card-text">Golden hour :)</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">Beach pics!</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">17/10</p>
+            </div>
+            <img src="https://picsum.photos/id/270/4000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>289 likes</strong></p>
+              <p class="card-text">I love the birds!</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">Seagull</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">18/10</p>
+            </div>
+            <img src="https://picsum.photos/id/275/4000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>203 likes</strong></p>
+              <p class="card-text">This bird stole my food! :(</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">Some rocks :)</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">23/10</p>
+            </div>
+            <img src="https://picsum.photos/id/280/2000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>248 likes</strong></p>
+              <p class="card-text">I collected tons!</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">Buildings!</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">26/10</p>
+            </div>
+            <img src="https://picsum.photos/id/290/2000/3000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>438 likes</strong></p>
+              <p class="card-text">Just hanging around taking some pics ;)</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem; border: 1px solid; border-color: grey; margin-bottom: 30px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="card-title p-2" style="margin: 0;">My city!</h5>
+              <p style="margin: 0; padding: 5px; text-align: right;">30/10</p>
+            </div>
+            <img src="https://picsum.photos/id/283/5000/4000" class="card-img-top" alt="">
+            <div class="card-body">
+              <p class="mb-1"><strong>327 likes</strong></p>
+              <p class="card-text">I love NY!</p>
+            </div>
           </div>
         </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/242/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/250/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/265/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/270/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/275/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/280/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/290/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/283/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/281/300/200" class="card-img-top" alt="">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/295/300/200" class="card-img mx-2 my-2" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/294/300/200" class="card-img mx-2 my-2" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/282/300/200" class="card-img mx-2 my-2" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/297/300/200" class="card-img mx-2 my-2" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem; border: 1px solid; border-color: grey;">
-          <h5 class="card-title">My puppy!</h5>
-          <img src="https://picsum.photos/id/293/300/200" class="card-img mx-2 my-2" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div> 
-      </div>
-
-
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
